[package]
name = "bevy-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy Framework with dynamic linking and dual X11/Wayland support
bevy = { version = "0.14.2", features = ["dynamic_linking", "wayland"] }
# Disable internal Bevy logging
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable extra aggressive optimization on release builds
# This will slow compile times
[profile.release]
# Copmile the crate as one unit, disabling LLVM parallelism
codegen-units = 1
# Do a second optimization pass over the program and dependencies
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Pull in optimizations from normal release
inherits = "release"
# Optimize for binary size
opt-level = "s"
# Strip all debugging info
strip = "debuginfo"

